# agent-context-audit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
agent_context_audit/: __init__.py  cli.py  scanner.py
examples/: sample_report.md
tests/: test_scanner.py
