[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-audit"
version = "0.1.1"
description = "Audit a repository for AI coding-agent readiness and generate a compact context pack."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Agent Context Audit contributors"}]
keywords = ["ai-agents", "coding-agents", "context-engineering", "cli", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agent-context-audit = "agent_context_audit.cli:main"

[project.urls]
Homepage = "https://github.com/SergioYin/agent-context-audit"
Repository = "https://github.com/SergioYin/agent-context-audit"
Issues = "https://github.com/SergioYin/agent-context-audit/issues"
